--- a/frontend/src/styles/Dashboard.css
+++ b/frontend/src/styles/Dashboard.css
@@ -1,6 +1,139 @@
 .dashboard-main {
   font-size: 30px;
   height: 100vh;
+  background: #f3f4f6;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
+  text-align: center;
+  padding: 20px;
+}
+
+.row1 {
+  display: grid;
+  grid-template-columns: 9fr 1fr;
+  gap: 20px;
+  width: 100%;
+  padding: 20px;
+}
+
+.heading {
+  font-size: 30px;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+h2 {
+  margin: 1% 0 0 1%;
+  color: #555;
+  text-align: left;
+}
+
+.dashboard-main p {
+  font-size: 20px;
+  color: #666;
+}
+
+.home-container-login {
+  text-align: center;
+  padding: 20px;
+  background: white;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  width: 80%;
+  max-width: 600px;
+}
+
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Initial color */
+  animation: fadeIn 0.3s ease-in;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.createbtncol {
+  padding: 10px 20px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.createbtn {
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.createbtn:hover {
+  background-color: #45a049;
+  transform: translateY(-2px);
+}
+
+.createbtncol > *, .heading > * {
+  align-self: flex-start;
+}
+
+.session-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+}
+
+.flashcard {
+  padding: 20px;
+  margin: 10px;
+  width: 300px;
+  background-color: #222831;
+  color: #eeeeee;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.flashcard:hover {
+  background-color: #393e46;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.detailsbtn {
+  padding: 6px 12px;
+  margin-left: 10%;
+  background-color: #00adb5;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.detailsbtn:hover {
+  background-color: #028a91;
+}
+
+.detailsbtn:focus {
+  outline: none;
+}
+
+
+/* .dashboard-main {
+  font-size: 30px;
+  height: 100vh;
 }
 
 .row1 {
@@ -35,7 +168,7 @@ h2 {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5); /* Initial color */
-  animation: fadeIn 0.3s ease-in;
+/*  animation: fadeIn 0.3s ease-in;
   padding-left: 22.25%;
   padding-top: 16.5%;
 }
@@ -97,4 +230,4 @@ h2 {
 
 .detailsbtn:focus {
   outline: none;
-}
+} */
