--- a/frontend/src/styles/Login.css
+++ b/frontend/src/styles/Login.css
@@ -1,6 +1,236 @@
 .login-main {
   display: flex;
   overflow-y: auto;
+  background: #f3f4f6;
+  justify-content: center;
+  align-items: center;
+  height: 85vh;
+  padding: 20px;
+}
+
+.login-left {
+  flex-grow: 1;
+  margin: 20px;
+  height: 60vh;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.login-left img {
+  width: 100%;
+  max-width: 300px;
+  border-radius: 8px;
+}
+
+.login-right {
+  height: 50vh;
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.login-right-container {
+  width: 80%;
+  height: 65vh;
+  max-width: 500px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  padding: 20px;
+}
+
+.login-right form {
+  display: flex;
+  flex-direction: column;
+}
+
+.login-logo {
+  align-self: center;
+  border-radius: 8px;
+  margin-top: 20px;
+}
+
+.login-logo img {
+  width: 50px;
+}
+
+.login-center {
+  margin: 20px 0;
+  text-align: center;
+}
+
+.login-center h2 {
+  font-size: 35px;
+  color: #333;
+}
+
+h2 {
+  /* text-align: center; */
+  margin: 3vh;
+}
+
+.login-center p {
+  font-weight: 400;
+  font-size: 20px;
+  margin-bottom: 20px;
+  color: #555;
+}
+
+form input[type="email"],
+form input[type="password"],
+form input[type="text"] {
+  width: 100%;
+  padding: 16px;
+  margin-bottom: 16px;
+  border: none;
+  border-bottom: 2px solid #222831;
+  outline: none;
+  box-sizing: border-box;
+  transition: border-bottom 0.3s ease;
+}
+
+form input[type="email"]:focus,
+form input[type="password"]:focus,
+form input[type="text"]:focus {
+  border-bottom: 2px solid #00adb5;
+}
+
+.pass-input-div {
+  position: relative;
+}
+
+.pass-input-div button {
+  font-size: 15px;
+  position: absolute;
+  top: 15px;
+  right: 10px;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  color: #222831;
+}
+
+form button[type="submit"] {
+  width: 100%;
+  padding: 16px;
+  border: none;
+  border-radius: 30px;
+  font-size: 16px;
+  cursor: pointer;
+  font-weight: 600;
+  background: #00adb5;
+  color: white;
+  transition: background 0.3s ease;
+}
+
+form button[type="submit"]:hover {
+  background: #028a91;
+}
+
+.see, .hide {
+  position: absolute;
+  right: 10px;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  color: #222831;
+}
+
+.login-center-options {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.remember-div {
+  display: flex;
+  align-items: center;
+  column-gap: 5px;
+}
+
+.remember-div label {
+  font-size: 13px;
+  font-weight: 500;
+  cursor: pointer;
+  margin-top: 2px;
+}
+
+.forgot-pass-link {
+  text-decoration: none;
+  font-size: 13px;
+  color: #00adb5;
+}
+
+.forgot-pass-link:hover {
+  text-decoration: underline;
+}
+
+.login-center-buttons {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+
+.login-center-buttons button:nth-child(1) {
+  background: #222831;
+  color: white;
+  border: 3px solid #222831;
+  transition: background 0.3s ease, color 0.3s ease;
+}
+
+.login-center-buttons button:nth-child(1):hover {
+  color: #333;
+  background-color: white;
+}
+
+.login-center-buttons button:nth-child(2) {
+  background: #f0f0f0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 10px;
+  transition: background 0.3s ease;
+}
+
+.login-center-buttons button:nth-child(2) img {
+  width: 30px;
+}
+
+.login-center-buttons button:nth-child(2):hover {
+  background: #c4c4c4c2;
+}
+
+.login-bottom-p {
+  text-align: center;
+  font-size: 15px;
+  margin-top: 20px;
+}
+
+.login-bottom-p a {
+  text-decoration: none;
+  font-weight: 600;
+  color: #00adb5;
+}
+
+.login-bottom-p a:hover {
+  text-decoration: underline;
+}
+
+
+
+/* .login-main {
+  display: flex;
+  overflow-y: auto;
 }
 
 .login-left {
@@ -190,4 +420,4 @@ form button[type="submit"] {
 
 .login-bottom-p a:hover {
   text-decoration: underline;
-}
+} */
