--- a/frontend/src/styles/Signup.css
+++ b/frontend/src/styles/Signup.css
@@ -1,4 +1,165 @@
 .register-main {
+  /* background: linear-gradient(135deg, #ff9a9e, #fad0c4); */
+  display: flex;
+  overflow-y: auto;
+  background: #f3f4f6;
+  justify-content: center;
+  align-items: center;
+  height: 85vh;
+  padding: 20px;
+}
+
+.register-left {
+  flex-grow: 1;
+  margin: 20px;
+  height: 60vh;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.register-left img {
+  width: 100%;
+  max-width: 300px;
+  border-radius: 8px;
+}
+
+.register-right {
+  height: 50vh;
+  /* flex-grow: 1; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.register-right-container {
+  width: 80%;
+  height: 65vh;
+  max-width: 500px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  padding: 20px;
+}
+
+.register-right form {
+  display: flex;
+  flex-direction: column;
+}
+
+.register-right form > * {
+  margin-bottom: 16px;
+}
+
+.register-logo {
+  align-self: center;
+  border-radius: 5px;
+  margin-top: 20px;
+}
+
+.register-logo img {
+  width: 50px;
+}
+
+.register-center {
+  text-align: center;
+}
+
+.register-center h2 {
+  font-size: 35px;
+  color: #333;
+}
+
+.register-center p {
+  font-weight: 400;
+  font-size: 20px;
+  margin-bottom: 40px;
+  color: #555;
+}
+
+form input[type="email"],
+form input[type="password"],
+form input[type="text"],
+form input[type="date"],
+form select {
+  width: 100%;
+  padding: 16px;
+  margin-bottom: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  outline: none;
+  box-sizing: border-box;
+  transition: border-color 0.3s ease;
+}
+
+form input[type="email"]:focus,
+form input[type="password"]:focus,
+form input[type="text"]:focus,
+form input[type="date"]:focus,
+form select:focus {
+  border-color: #00adb5;
+}
+
+form button[type="submit"] {
+  width: 100%;
+  padding: 16px;
+  border: none;
+  border-radius: 30px;
+  font-size: 16px;
+  cursor: pointer;
+  font-weight: 600;
+  background-color: #00adb5;
+  color: white;
+  transition: background-color 0.3s ease;
+}
+
+form button[type="submit"]:hover {
+  background-color: #007b8a;
+}
+
+form button[type="button"] {
+  padding: 16px;
+  border: none;
+  border-radius: 30px;
+  font-size: 16px;
+  cursor: pointer;
+  font-weight: 600;
+  background-color: #00adb5;
+  color: white;
+  margin-right: 10px;
+  transition: background-color 0.3s ease;
+}
+
+form button[type="button"]:hover {
+  background-color: #007b8a;
+}
+
+.register-bottom-p {
+  text-align: center;
+  font-size: 15px;
+  padding-bottom: 40px;
+}
+
+.register-bottom-p a {
+  text-decoration: none;
+  font-weight: 600;
+  color: #00adb5;
+}
+
+.register-bottom-p a:hover {
+  text-decoration: underline;
+}
+
+
+
+/* .register-main {
   display: flex;
   overflow-y: auto;
 }
@@ -31,12 +192,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center; /* Centering content vertically */
-}
+/*}
 
 .register-right form {
   width: 100%; /* Ensuring the form takes full width */
-  max-width: 400px; /* Adjust as needed */
-  display: flex;
+/*  max-width: 400px; /* Adjust as needed */
+/*  display: flex;
   flex-direction: column;
 }
 
@@ -126,4 +287,4 @@ form button[type="button"] {
 
 .register-bottom-p a:hover {
   text-decoration: underline;
-}
+} */
