--- a/frontend/src/styles/Signup.css
+++ b/frontend/src/styles/Signup.css
@@ -2,7 +2,8 @@
   /* background: linear-gradient(135deg, #ff9a9e, #fad0c4); */
   display: flex;
   overflow-y: auto;
-  background: #f3f4f6;
+  /* background: #f3f4f6; */
+  background: linear-gradient(135deg, #ff7e5f, #feb47b);
   justify-content: center;
   align-items: center;
   height: 85vh;
@@ -156,135 +157,3 @@ form button[type="button"]:hover {
 .register-bottom-p a:hover {
   text-decoration: underline;
 }
-
-
-
-/* .register-main {
-  display: flex;
-  overflow-y: auto;
-}
-
-.register-left {
-  flex-grow: 1;
-  margin-top: 60px;
-  margin-left: 20px;
-  height: 80vh;
-  border-radius: 5px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.register-left img {
-  width: 400px;
-}
-
-.register-right {
-  height: 100vh;
-  flex-grow: 1;
-}
-
-.register-right-container {
-  height: 100%;
-  width: 80%;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; /* Centering content vertically */
-/*}
-
-.register-right form {
-  width: 100%; /* Ensuring the form takes full width */
-/*  max-width: 400px; /* Adjust as needed */
-/*  display: flex;
-  flex-direction: column;
-}
-
-.register-right form > * {
-  margin-bottom: 16px;
-}
-
-.register-logo {
-  align-self: center;
-  border-radius: 5px;
-  margin-top: 20px;
-}
-.register-logo img {
-  width: 50px;
-}
-
-.register-center {
-  text-align: center;
-}
-
-.register-center h2 {
-  font-size: 35px;
-}
-
-.register-center p {
-  font-weight: 400;
-  font-size: 20px;
-  margin-bottom: 40px;
-}
-
-form input[type="email"],
-form input[type="password"],
-form input[type="text"],
-form input[type="date"],
-form select {
-  width: 100%;
-  padding: 16px;
-  margin-bottom: 16px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  outline: none;
-  box-sizing: border-box;
-}
-
-form button[type="submit"] {
-  width: 100%;
-  padding: 16px;
-  border: none;
-  border-radius: 4px;
-  font-size: 16px;
-  cursor: pointer;
-  border-radius: 30px;
-  font-weight: 600;
-  background-color: black;
-  color: white;
-  transition: background-color 0.3s ease;
-}
-
-form button[type="submit"]:hover {
-  background-color: #333;
-}
-
-form button[type="button"] {
-  padding: 16px;
-  border: none;
-  border-radius: 4px;
-  font-size: 16px;
-  cursor: pointer;
-  border-radius: 30px;
-  font-weight: 600;
-  background-color: black;
-  color: white;
-  margin-right: 10px;
-  transition: background-color 0.3s ease;
-}
-
-.register-bottom-p {
-  text-align: center;
-  font-size: 15px;
-  padding-bottom: 40px;
-}
-
-.register-bottom-p a {
-  text-decoration: none;
-  font-weight: 600;
-}
-
-.register-bottom-p a:hover {
-  text-decoration: underline;
-} */
